--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,13 +26,22 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "camelcase": ["error", {"properties": "never"}],
     "prettier/prettier": "error",
+    "react/jsx-one-expression-per-line": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "no-use-before-define": "off",
+    //"camelcase": ["error", {"properties": "never"}],
     "@typescript-eslint/no-use-before-define": ["error"],
     "import/prefer-default-export": "off",
+   /* "typescript-eslint/explicit-function-return-type":[
+      "error",
+      {
+        "allowExpressions": true
+      }
+    ]*/
     "import/extensions": [
       "error",
       "ignorePackages",
